docs: fix tick_listener grammar and test descriptions

--- a/src/components/tick_listener/test/tests.tick_listener.tests.yaml
+++ b/src/components/tick_listener/test/tests.tick_listener.tests.yaml
@@ -2,4 +2,4 @@
 description: This is a unit test suite for the Tick Listener component. It tests the component in a Linux environment, responding to ticks.
 tests:
   - name: Test_Tick_Handling
-    description: This unit test sends many ticks to the Interrupt Listener component and expects it count them correctly.
+    description: This unit test sends many ticks to the Tick Listener component and expects it to count them correctly.
