--- a/src/components/tick_listener/tick_listener.component.yaml
+++ b/src/components/tick_listener/tick_listener.component.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is the Tick Listener component. It is attached to an tick and provides a connector which will give the caller a count. The count includes the number of times the tick has been received since the last invocation of the connector. This component is a useful substitute for the Interrupt Listener component when you want to simulate interrupts with software ticks.
+description: This is the Tick Listener component. It is attached to a tick and provides a connector which will give the caller a count. The count includes the number of times the tick has been received since the last invocation of the connector. This component is a useful substitute for the Interrupt Listener component when you want to simulate interrupts with software ticks.
 execution: passive
 connectors:
   - description: The interrupt counter get connection.
