--- a/src/types/command/command_registration.record.yaml
+++ b/src/types/command/command_registration.record.yaml
@@ -2,10 +2,10 @@
 description: Record for holding command registration data
 fields:
   - name: Registration_Id
-    description: The registration ID. A ID assigned to each registration which can be used for anything.
+    description: The registration ID. An ID assigned to each registration which can be used for anything.
     type: Command_Types.Command_Registration_Id
     format: U16
   - name: Command_Id
-    description: The command ID for to register.
+    description: The command ID to register.
     type: Command_Types.Command_Id
     format: U16
