docs: fix fault/memory type description typos

--- a/src/types/fault/packed_fault_id.record.yaml
+++ b/src/types/fault/packed_fault_id.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: A packed record which holds an fault identifier.
+description: A packed record which holds a fault identifier.
 fields:
   - name: Id
     description: The fault identifier
