--- a/src/types/memory/32bit/memory_region_write.record.yaml
+++ b/src/types/memory/32bit/memory_region_write.record.yaml
@@ -1,5 +1,5 @@
 ---
-description: A memory region CRC report.
+description: A memory region write record.
 with:
   - Command_Types
   - Basic_Types
