Deep-read batch 3: fix monitor/moving_average/crc typo and mismatch comments

--- a/src/util/monitor/test/monitor.tests.yaml
+++ b/src/util/monitor/test/monitor.tests.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is a unit test suite for the crc 16 algorithm
+description: This is a unit test suite for the monitor utility
 tests:
   - name: Test_Monitor_Green_To_Red
     description: This test makes sure monitor transitions from green to red correctly.
