fix: finalize remaining spelling fixes

--- a/src/components/last_chance_manager/last_chance_manager.requirements.yaml
+++ b/src/components/last_chance_manager/last_chance_manager.requirements.yaml
@@ -1,6 +1,6 @@
 ---
 description: The requirements for the Last Chance Handler component.
 requirements:
-  - text: The component shall provide a nonvolatile last chance handler memory region, where exception occurrence data is can be stored by the last chance handler.
+  - text: The component shall provide a nonvolatile last chance handler memory region, where exception occurrence data can be stored by the last chance handler.
   - text: The component shall provide a command to dump the last chance handler memory region.
   - text: The component shall provide a command to clear the last chance handler memory region.
